[package]
name = "tokio-tungstenite-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"
url = "2"
