[package]
name = "tokio-tungstenite-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
async-tungstenite = { version = "0.17.2", features = ["async-native-tls"] }
futures = "0.3"
futures-util = "0.3"
url = "2"
